--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-doList",
   "version": "1.0.0",
-  "description": "",
+  "description": ".",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,5 +24,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "main": "webpack.config.js"
 }
