--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": ".",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open"
@@ -20,7 +21,10 @@
   },
   "homepage": "https://github.com/realisticattorney/to-doList#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "babel-eslint": "10.1.x",
+    "babel-jest": "^26.6.3",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
