--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "jsdom": "^16.5.3",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
